<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProjectActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="368dp"
        android:layout_height="70dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:onClick="saveChanges"
            android:text="@string/save_changes"
            android:textSize="12sp" />

        <Button
            android:id="@+id/discardButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:onClick="discardChanges"
            android:text="@string/discard_changes"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:onClick="export"
            android:text="@string/export_list"
            android:textSize="12sp"/>
        <!--android:onClick="export"-->

        <Button
            android:id="@+id/archiveProject"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="7dp"
            android:layout_marginStart="3dp"
            android:layout_weight="1"
            android:onClick="archiveProject"
            android:text="@string/archiveButton"
            android:textSize="12sp" />

    </LinearLayout>

    <!--android:layout_marginBottom="7dp"-->
    <!--android:layout_marginLeft="7dp"-->
    <!--android:layout_marginRight="7dp"-->
    <!--android:layout_marginTop="7dp"-->
    <TextView
        android:id="@+id/projectHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="fill_parent"
        android:layout_height="397dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/projectHeader"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>